--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "mqtt": "^5.10.1",
+    "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.10.9",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/paho-mqtt": "^1.0.10",
     "@types/react": "~18.2.45",
     "typescript": "~5.3.3"
   },
