--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,15 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "target": "esnext",
+    "module": "commonjs",
+    "jsx": "react-native",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true
+  },
+  "extends": "expo/tsconfig.base",
+  "include": ["src/**/*", "index.tsx"],  
+  "exclude": ["node_modules"]
 }
